syntax = "proto3";

package currency;

import "google/rpc/status.proto";

option go_package = "github.com/kahvecikaan/buildingMicroservices/currency/protos";

service Currency {
  // GetRate returns the exchange rate for the two provided currency codes
  rpc GetRate(RateRequest) returns (RateResponse);
  // SubscribeRates allows a client to subscribe for changes in an exchange rate
  // when the rate changes a response will be sent
  rpc SubscribeRates(stream RateRequest) returns (stream StreamingRateResponse);
}

// RateRequest defines the request for a GetRate call
message RateRequest {
  // Base is the base currency code for the rate
  Currencies Base = 1;
  // Destination is the destination currency code for the rate
  Currencies Destination = 2;
}

// RateResponse is the response from a GetRate call, it contains base, destination, and
// rate which is a floating point number and can be used to convert between the
// two currencies specified in the request.
message RateResponse {
  // Base is the base currency code for the rate
  Currencies Base = 1;
  // Destination is the destination currency code for the rate
  Currencies Destination = 2;
  // Rate is the returned currency rate
  double Rate = 3;
}

message StreamingRateResponse {
  oneof message {
    RateResponse rate_response = 1;
    google.rpc.Status error = 2;
  }
}

// Currencies is an enum which represents the allowed currencies for the API
enum Currencies {
  UNKNOWN = 0;
  EUR = 1;
  USD = 2;
  JPY = 3;
  BGN = 4;
  CZK = 5;
  DKK = 6;
  GBP = 7;
  HUF = 8;
  PLN = 9;
  RON = 10;
  SEK = 11;
  CHF = 12;
  ISK = 13;
  NOK = 14;
  HRK = 15;
  RUB = 16;
  TRY = 17;
  AUD = 18;
  BRL = 19;
  CAD = 20;
  CNY = 21;
  HKD = 22;
  IDR = 23;
  ILS = 24;
  INR = 25;
  KRW = 26;
  MXN = 27;
  MYR = 28;
  NZD = 29;
  PHP = 30;
  SGD = 31;
  THB = 32;
  ZAR = 33;
}
